added font awesome

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Noto+Sans:ital,wght@0,400;1,100&family=Pacifico&family=Playfair+Display:wght@700&family=Poppins:wght@200;300;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/17141a7dbb.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1>Hello world</h1>
