--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     ></script>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <p>Hi there</p>
+    <div class="hero">
+      <p>Hi, I am</p>
+      <h1>Nahid Norouzi</h1>
+      <h2 class="mb-5 mt-5">Frontend Developer, Based in Iran.</h2>
+      <a href="" class="btn">Get started</a>
+    </div>
   </body>
 </html>
