--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/styles/portfolio.css" />
-    <!-- CSS only -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,6 +40,80 @@
       <h1>Nahid Norouzi</h1>
       <h2 class="mb-5 mt-5">Frontend Developer, Based in Iran.</h2>
       <a href="" class="btn">Get started</a>
+    </div>
+    <div class="projects container-fluidx">
+      <div class="row text-center m-5">
+        <p class="projects-header">
+          Featured Project which my best projects be choice to show
+        </p>
+      </div>
+      <div class="row mx-auto mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/yogurt.png"
+            alt="Yogurt Project - Nahid Norouzi"
+            class="mw-100 mh-100"
+          />
+        </div>
+        <div class="col description px-5">
+          <h2 class="mb-5">Yogurt Project</h2>
+          <p class="projects-description">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A sm-6all river named Duden flows by
+          </p>
+          <a href="*" class="btn">View detail project</a>
+        </div>
+      </div>
+      <div class="row mx-auto mb-5">
+        <div class="col description px-5">
+          <h2 class="mb-5">Weather App</h2>
+          <p class="projects-description">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A sm-6all river named Duden flows by
+          </p>
+          <a href="*" class="btn">View detail project</a>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/weather.png"
+            alt="Yogurt Project - Nahid Norouzi"
+            class="mw-100 mh-100"
+          />
+        </div>
+      </div>
+      <div class="row mx-auto mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/dictionary.png"
+            alt="Yogurt Project - Nahid Norouzi"
+            class="mw-100 mh-100"
+          />
+        </div>
+        <div class="col description px-5">
+          <h2 class="mb-5">Dictionary App</h2>
+          <p class="projects-description">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="*" class="btn">View detail project</a>
+        </div>
+      </div>
+      <div class="row work-inquiry mb-5">
+        <div class="col-sm my-4 test">
+          <h2>Work Inquiry</h2>
+          <p>Let’s work together and I’ll help you by all my best</p>
+        </div>
+        <div class="col-sm my-5 text-center">
+          <a href="*" class="btn">Let's talk here</a>
+        </div>
+      </div>
+      <div class="footer"></div>
     </div>
   </body>
 </html>
