added navbar and work inquiry + responsive

--- a/index.html
+++ b/index.html
@@ -35,6 +35,38 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-bar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Nahid Norouzi</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse navbar-items" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>Hi, I am</p>
       <h1>Nahid Norouzi</h1>
@@ -104,12 +136,14 @@
           <a href="*" class="btn">View detail project</a>
         </div>
       </div>
-      <div class="row work-inquiry mb-5">
-        <div class="col-sm my-4 test">
-          <h2>Work Inquiry</h2>
-          <p>Let’s work together and I’ll help you by all my best</p>
+      <div class="row work-inquiry">
+        <div class="col-sm-6 my-4 work-inquiry-description">
+          <div>
+            <h2>Work Inquiry</h2>
+            <p>Let’s work together and I’ll help you by all my best</p>
+          </div>
         </div>
-        <div class="col-sm my-5 text-center">
+        <div class="col-sm-6 text-center contact-button">
           <a href="*" class="btn">Let's talk here</a>
         </div>
       </div>
