added footer + responsive

--- a/index.html
+++ b/index.html
@@ -147,7 +147,21 @@
           <a href="*" class="btn">Let's talk here</a>
         </div>
       </div>
-      <div class="footer"></div>
+    </div>
+
+    <div class="row email">
+      <a
+        href="mailto:nahidnorouzi@hotmail.com"
+        class="d-block text-center text-decoration-none text-dark"
+        >nahidnorouzi@hotmail.com</a
+      >
+    </div>
+    <div class="row text-center my-5">
+      <p>
+        <a href="#"><i class="fa-brands fa-facebook-f facebook mx-2"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter twitter mx-2"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
+      </p>
     </div>
   </body>
 </html>
