--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-bar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nahid Norouzi</a>
+        <a class="navbar-brand" href="/">Nahid Norouzi</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -58,7 +58,7 @@
               <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
+              <a class="nav-link" href="/work.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
