--- a/work.html
+++ b/work.html
@@ -35,8 +35,9 @@
     ></script>
   </head>
   <body>
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-white navigation-bar mb-5">
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-white navigation-bar mb-5"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Nahid Norouzi</a>
         <button
@@ -69,25 +70,34 @@
       </div>
     </nav>
     <div class="container">
-        <div class="row about-me ">
-            <div class="col description">
-                <h1>Hi I am Nahid Norouzi</h1>
-                <h2>Frontend Developer, based in Iran</h2>
-                <p>For anyone who wants to start learning code
-                    , this workshop is very interesting. You will be 
-                    challenged with different exercises, and everything is 
-                    well explained, homework and deadlines are good for keep focus</p>
-                    <a href="#">View my projects</a>
+        <div class="row works">
+            <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        </div>   
+        <div class="row works text-center">
+            <div class="col-md-6">
+                <img src="/images/yogurt2.png" alt="Yogurt project" class="mw-100 mh-100">
+                <h2>Yogurt Project</h2>
+                <p>Frontend Developer</p>
             </div>
-            <div class="col d-none d-lg-block">
-                <img src="/images/nahidnorouzi.jpeg" alt="Nahdi Norouzi" class="mw-100 mh-100 nahid-norouzi">
+            <div class="col-md-6">
+                <img src="/images/weather2.png" alt="Weather project" class="mw-100 mh-100">
+                <h2>Weather  Project</h2>
+                <p>Frontend Developer</p>
             </div>
         </div>
-
-
-
-
-        <div class="row work-inquiry my-5">
+        <div class="row works text-center">
+            <div class="col-md-6">
+                <img src="/images/dictionary2.png" alt="Dictionary project" class="mw-100 mh-100">
+                <h2>Dictionary  Project</h2>
+                <p>Frontend Developer</p>
+            </div>
+            <div class="col-md-6">
+                <img src="/images/translation.png" alt="Translation project" class="mw-100 mh-100">
+                <h2>Translation  Project</h2>
+                <p>Frontend Developer</p>
+            </div>
+        </div>
+         <div class="row work-inquiry my-5">
             <div class="col-sm-6 work-inquiry-description my-4">
             <div>
                 <h2>Work Inquiry</h2>
