added contact page + responsive

--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,9 @@
     ></script>
   </head>
   <body>
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-white navigation-bar mb-5">
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-white navigation-bar mb-5"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Nahid Norouzi</a>
         <button
@@ -68,25 +69,9 @@
         </div>
       </div>
     </nav>
-    <div class="container">
-        <div class="row about-me ">
-            <div class="col description">
-                <h1>Hi I am Nahid Norouzi</h1>
-                <h2>Frontend Developer, based in Iran</h2>
-                <p>For anyone who wants to start learning code
-                    , this workshop is very interesting. You will be 
-                    challenged with different exercises, and everything is 
-                    well explained, homework and deadlines are good for keep focus</p>
-                    <a href="#">View my projects</a>
-            </div>
-            <div class="col d-none d-lg-block">
-                <img src="/images/nahidnorouzi.jpeg" alt="Nahdi Norouzi" class="mw-100 mh-100 nahid-norouzi">
-            </div>
-        </div>
-
-
-
-
+    <div class="container works">
+        <h1 class="mb-5">Let's get in touch!</h1>
+    </div>
         <div class="row work-inquiry my-5">
             <div class="col-sm-6 work-inquiry-description my-4">
             <div>
@@ -114,6 +99,5 @@
             <a href="#"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
         </p>
         </div>
-    </div>
   </body>
 </html>
