--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="/work.html">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
