--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
         <div class="collapse navbar-collapse navbar-items" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link active" href="/about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/work.html">Work</a>
