--- a/work.html
+++ b/work.html
@@ -54,13 +54,13 @@
         <div class="collapse navbar-collapse navbar-items" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link"  href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work.html">Work</a>
+              <a class="nav-link active" href="/work.html">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact.html">Contact</a>
