corrected contact page

--- a/contact.html
+++ b/contact.html
@@ -72,6 +72,7 @@
     <div class="container works">
         <h1 class="mb-5">Let's get in touch!</h1>
     </div>
+    <div class="container">
         <div class="row work-inquiry my-5">
             <div class="col-sm-6 work-inquiry-description my-4">
             <div>
@@ -98,6 +99,7 @@
             <a href="#"><i class="fa-brands fa-twitter twitter mx-2"></i></a>
             <a href="#"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
         </p>
+        </div>
         </div>
   </body>
 </html>
