--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Background and work experience of Nahid Norouzi">
     <title>About Nahid Norouzi</title>
     <link rel="stylesheet" href="/styles/portfolio.css" />
     <link
@@ -38,7 +39,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light bg-white navigation-bar mb-5">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Nahid Norouzi</a>
+        <a class="navbar-brand" href="/" title="Homepage of Nahid Norouzi">Nahid Norouzi</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -53,16 +54,16 @@
         <div class="collapse navbar-collapse navbar-items" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/" title="Homepage of Nahid Norouzi">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link active" href="/about.html" title="About Nahid Norouzi">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work.html">Work</a>
+              <a class="nav-link" href="/work.html" title="Nahid Norouzi's work">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html" title="Contact Nahid Norouzi">Contact</a>
             </li>
           </ul>
         </div>
@@ -77,10 +78,10 @@
                     , this workshop is very interesting. You will be 
                     challenged with different exercises, and everything is 
                     well explained, homework and deadlines are good for keep focus</p>
-                    <a href="#">View my projects</a>
+                    <a href="#" title="View Nahid Norouzi's projects">View my projects</a>
             </div>
             <div class="col d-none d-lg-block">
-                <img src="/images/nahidnorouzi.jpeg" alt="Nahdi Norouzi" class="mw-100 mh-100 nahid-norouzi">
+                <img src="/images/nahidnorouzi.jpeg" alt="Frontend Developer - Nahdi Norouzi" class="mw-100 mh-100 nahid-norouzi">
             </div>
         </div>
 
@@ -95,7 +96,7 @@
             </div>
             </div>
             <div class="col-sm-6 text-center contact-button">
-            <a href="*" class="btn">Let's talk here</a>
+            <a href="*" class="btn" title="Contact Nahid Norouzi">Let's talk here</a>
             </div>
         </div>
         </div>
@@ -104,14 +105,15 @@
         <a
             href="mailto:nahidnorouzi@hotmail.com"
             class="d-block text-center text-decoration-none text-dark"
+            title="Send an email to Nahid Norouzi"
             >nahidnorouzi@hotmail.com</a
         >
         </div>
         <div class="row text-center my-5">
         <p>
-            <a href="#"><i class="fa-brands fa-facebook-f facebook mx-2"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter twitter mx-2"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
+            <a href="#" title="Nahid Norouzi's Facebook"><i class="fa-brands fa-facebook-f facebook mx-2"></i></a>
+            <a href="#" title="Nahid Norouzi's Twitter"><i class="fa-brands fa-twitter twitter mx-2"></i></a>
+            <a href="#" title="Nahid Norouzi's Instagram"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
         </p>
         </div>
     </div>
