--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nahid Norouzi</title>
+    <meta
+      name="description"
+      content="Nahid Norouzi is a frontend developer, based in Iran."
+    />
+    <title>Frontend Developer - Nahid Norouzi</title>
     <link rel="stylesheet" href="/styles/portfolio.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -37,7 +41,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-bar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Nahid Norouzi</a>
+        <a class="navbar-brand" href="/" title="Homepage of Nahid Norouzi"
+          >Nahid Norouzi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -52,16 +58,31 @@
         <div class="collapse navbar-collapse navbar-items" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage of Nahid Norouzi"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html" title="About Nahid Norouzi"
+                >About</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/work.html">Work</a>
+              <a class="nav-link" href="/work.html" title="Nahid Norouzi's work"
+                >Work</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact Nahid Norouzi"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -95,7 +116,9 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A sm-6all river named Duden flows by
           </p>
-          <a href="*" class="btn">View detail project</a>
+          <a href="*" class="btn" title="View Yogurt Project"
+            >View detail project</a
+          >
         </div>
       </div>
       <div class="row mx-auto mb-5">
@@ -107,12 +130,14 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A sm-6all river named Duden flows by
           </p>
-          <a href="*" class="btn">View detail project</a>
+          <a href="*" class="btn" title="View Weather Project"
+            >View detail project</a
+          >
         </div>
         <div class="col d-none d-lg-block">
           <img
             src="/images/weather.png"
-            alt="Yogurt Project - Nahid Norouzi"
+            alt="Weather Project - Nahid Norouzi"
             class="mw-100 mh-100"
           />
         </div>
@@ -121,7 +146,7 @@
         <div class="col d-none d-lg-block">
           <img
             src="/images/dictionary.png"
-            alt="Yogurt Project - Nahid Norouzi"
+            alt="Dictionary Project - Nahid Norouzi"
             class="mw-100 mh-100"
           />
         </div>
@@ -133,7 +158,9 @@
             live in Bookmarksgrove right at the coast of the Semantics, a large
             language ocean. A small river named Duden flows by
           </p>
-          <a href="*" class="btn">View detail project</a>
+          <a href="*" class="btn" title="View Dictionary Project"
+            >View detail project</a
+          >
         </div>
       </div>
       <div class="row work-inquiry">
@@ -144,7 +171,9 @@
           </div>
         </div>
         <div class="col-sm-6 text-center contact-button">
-          <a href="*" class="btn">Let's talk here</a>
+          <a href="*" class="btn" title="Contact Nahid Norouzi"
+            >Let's talk here</a
+          >
         </div>
       </div>
     </div>
@@ -153,14 +182,21 @@
       <a
         href="mailto:nahidnorouzi@hotmail.com"
         class="d-block text-center text-decoration-none text-dark"
+        title="Send an email to Nahid Norouzi"
         >nahidnorouzi@hotmail.com</a
       >
     </div>
     <div class="row text-center my-5">
       <p>
-        <a href="#"><i class="fa-brands fa-facebook-f facebook mx-2"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter twitter mx-2"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
+        <a href="#" title="Facebook of Nahid Norouzi"
+          ><i class="fa-brands fa-facebook-f facebook mx-2"></i
+        ></a>
+        <a href="#" title="Twitter of Nahid Norouzi"
+          ><i class="fa-brands fa-twitter twitter mx-2"></i
+        ></a>
+        <a href="#" title="Instagram of Nahid Norouzi"
+          ><i class="fa-brands fa-instagram instagram mx-2"></i
+        ></a>
       </p>
     </div>
   </body>
