added Github link

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2 class="mb-5 mt-5">Frontend Developer, Based in Iran.</h2>
       <a href="" class="btn">Get started</a>
     </div>
-    <div class="projects container-fluidx">
+    <div class="projects container">
       <div class="row text-center m-5">
         <p class="projects-header">
           Featured Project which my best projects be choice to show
@@ -198,6 +198,14 @@
           ><i class="fa-brands fa-instagram instagram mx-2"></i
         ></a>
       </p>
+    </div>
+    <div class="github text-center mb-5">
+      ✌️ This website was coded by Nahid Norouzi, and is
+      <a
+        href="https://github.com/nefbao/portfolio-project"
+        title="Nahid Norouzi's Github"
+        >open-sourced</a
+      >
     </div>
   </body>
 </html>
