--- a/work.html
+++ b/work.html
@@ -126,6 +126,14 @@
             <a href="#" title="Nahid Norouzi's Instagram"><i class="fa-brands fa-instagram instagram mx-2"></i></a>
         </p>
         </div>
+        <div class="github text-center mb-5">
+      ✌️ This website was coded by Nahid Norouzi, and is
+      <a
+        href="https://github.com/nefbao/portfolio-project"
+        title="Nahid Norouzi's Github"
+        >open-sourced</a
+      >
+    </div>
     </div>
   </body>
 </html>
