--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="hero">
       <p>Hi, I am</p>
       <h1>Nahid Norouzi</h1>
-      <h2 class="mb-5 mt-5">Frontend Developer, Based in Iran.</h2>
+      <h2 class="mb-5 mt-5">Frontend Developer, based in Iran.</h2>
       <a href="" class="btn">Get started</a>
     </div>
     <div class="projects container">
